Fix: edit values overflows

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -59,6 +59,9 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+.flex-wrap{
+    flex-wrap: wrap;
+}
 
 .navtab{
     background-color: var(--light-grey);
